# parametric

./: .buildinfo  .gitignore  .gitlab-ci.yml  CITATION.cff  CMakeLists.txt  Changelog.md  README.md  REUSE.toml  Readme.md  api.html  conanfile.py  concept.html  examples.html  genindex.html  index.html  main.cpp  objects.inv  parametric_core.hpp  pixi.toml  search.html  searchindex.js  usage.html
.doctrees/: api.doctree  concept.doctree  environment.pickle  examples.doctree  genindex.doctree  index.doctree  usage.doctree
.github/: dependabot.yml
.github/workflows/: build-docs-gh-pages.yml  build-test.yml  ci.yml  citation-sync.yml  reuse.yml
_sources/: api.rst.txt  concept.rst.txt  genindex.rst.txt  usage.rst.txt
benchmarks/: CMakeLists.txt  bench_operators.cpp  main.cpp
cmake/: FindSphinx.cmake  parametric-config.cmake.in
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  api.rst  concept.rst  conf.py  conf.py.in  examples.rst  genindex.rst  index.rst  usage.rst
examples/: CMakeLists.txt  custom_computenode.cpp  parametric_cad.cpp  parametric_struct.cpp  serialization.cpp  tutorial.cpp
parametric/: adaptors.hpp  core.hpp  dag.hpp  mutex.hpp  operators.hpp  optional.hpp  serialization.hpp  tupletools.hpp  typename.hpp
parametric/impl/: core_impl.hpp  optional.hpp
test_package/: CMakeLists.txt  conanfile.py  example.cpp
tests/: CMakeLists.txt  customclass.cpp  dag.cpp  eval.cpp  invalidator.cpp  param.cpp  parametric_struct.cpp  serialize.cpp  testmain.cpp
tests/cmake/: AddGoogleTest.cmake  DownloadProject.CMakeLists.cmake.in  DownloadProject.cmake
