cmake_minimum_required(VERSION 3.4)

project(parametric-examples)

if (NOT TARGET "parametric")
  find_package(parametric REQUIRED)
endif()

find_package(OpenMP)

if (OpenMP_CXX_FOUND)
  set(PARAMETRIC_WITH_OPENMP TRUE)
  if (CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
    if (MSVC_VERSION VERSION_GREATER_EQUAL 1929)
      message(STATUS "Setting openmp:llvm and openmp:experimental to enable OpenMP 3.1 features.")
      set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -openmp:llvm -openmp:experimental")
    else()
      set(PARAMETRIC_WITH_OPENMP FALSE)
      message(STATUS "MSVC version does not support OpenMP 3.1. Not building with OpenMP support.")
    endif()
  endif()
  if (CMAKE_CXX_COMPILER_ID MATCHES "CLANG")
    message(STATUS "Setting -fopenmp=libomp to enable OpenMP 3.1 features.")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp=libomp")
  endif()
  if (PARAMETRIC_WITH_OPENMP)
    add_compile_definitions(PARAMETRIC_WITH_OPENMP)
  endif()
endif()

add_executable(tutorial tutorial.cpp)
add_executable(custom_computenode custom_computenode.cpp)
add_executable(parametric_struct parametric_struct.cpp)
add_executable(serialization serialization.cpp)
target_link_libraries(tutorial PRIVATE parametric)
target_link_libraries(custom_computenode PRIVATE parametric)
target_link_libraries(parametric_struct PRIVATE parametric)
target_link_libraries(serialization PRIVATE parametric)

if (PARAMETRIC_WITH_OPENMP)
    target_link_libraries(tutorial PRIVATE OpenMP::OpenMP_CXX)
    target_link_libraries(custom_computenode PRIVATE OpenMP::OpenMP_CXX)
    target_link_libraries(parametric_struct PRIVATE OpenMP::OpenMP_CXX)
    target_link_libraries(serialization PRIVATE OpenMP::OpenMP_CXX)
endif(PARAMETRIC_WITH_OPENMP)

# a CAD example
find_package(OCE QUIET)
if (OCE_FOUND)
    add_executable(parametric_cad parametric_cad.cpp)
    target_link_libraries(parametric_cad PRIVATE parametric TKBO TKPrim)
    target_include_directories(parametric_cad PRIVATE ${OCE_INCLUDE_DIRS})
    if (PARAMETRIC_WITH_OPENMP)
        target_link_libraries(parametric_cad PRIVATE OpenMP::OpenMP_CXX)
    endif()
else (OCE_FOUND)
    message(STATUS "OCE not found. Parametric CAD example cannot be build.")
endif(OCE_FOUND)
